# not_a_bot

./: LICENSE  README.md  conversationbot  pyproject.toml  setup.cfg
.github/workflows/: bot_workflow.yml
backend/: Dockerfile  requirements.txt
backend/bot_back/: asgi.py  manage.py  settings.py  wsgi.py
backend/bot_back/bot_back/: settings.py  urls.py
backend/bot_back/quiz/: serializers.py  urls.py  views.py
backend/quiz/: TODO  admin.py  http_test.http  models.py  serializers.py  urls.py  views.py
backend/quiz/migrations/: 0001_initial.py  0002_vocabularfacts_vocabularhints_vocabularjokes_and_more.py
bot/: Dockerfile  TODO  callbacks.py  commands.py  connection_test.py  conv_test_inline.py  conversation_test.py  corpus.py  start_dialog.py  test_a_bot.py  test_a_bot_2.py  test_util.py
infra/: doc_pages.txt  docker-compose.yml  nginx.conf
